fixed bug with not showing backrgound landing and registration and sign-in page

--- a/src/pug/pages/scss/landing-page.scss
+++ b/src/pug/pages/scss/landing-page.scss
@@ -3,6 +3,7 @@
     min-height: 830px;
     height: auto;
     width: 100%;
+    background: url('../../../img/landing.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: bottom;
