--- a/src/pug/pages/scss/registration-page.scss
+++ b/src/pug/pages/scss/registration-page.scss
@@ -6,6 +6,7 @@
     min-height: 683px;  
     height: auto;
     width: 100%;
+    background: url('../../../img/registration-page.svg'); 
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: bottom;
